--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
